--- a/src/workflowexample/workflowexample.scss
+++ b/src/workflowexample/workflowexample.scss
@@ -1,3 +1,3 @@
-body {
-	background: blue;
+.cf-page__header {
+	background: url('https://rawcdn.githack.com/rtsai1/benchmark2020/23706944662fa6b81901d5629ba75f3ffc7b2252/dist/assets/kpmg-logo--white-bg.png');
 }
