--- a/src/workflowexample/workflowexample.scss
+++ b/src/workflowexample/workflowexample.scss
@@ -1,3 +1,1 @@
-.cf-page__header {
-	background: url('../assets/kpmg-logo--white-bg.png') no-repeat 1em center/contain;
-}
+@import "~@/styles/modules/cf-page__header";
