--- a/src/styles/modules/_cf-text-box.scss
+++ b/src/styles/modules/_cf-text-box.scss
@@ -1,7 +1,9 @@
 @import "~@styles/common/variables";
 
 .cf-text-box {
+	transition: border-color 100ms ease-out;
+	
 	&:focus {
-		color: $kpmg-blue;
+		border-color: $kpmg-blue;
 	}
 }
