Update general text

--- a/src/workflowexample/workflowexample.scss
+++ b/src/workflowexample/workflowexample.scss
@@ -1,3 +1,4 @@
 @import "~@/styles/modules/cf-page__header";
 @import "~@/styles/modules/cf-text-box";
 @import "~@/styles/modules/cf-navigation";
+@import "~@/styles/modules/cf-page";
