Hide power by link

--- a/src/workflowexample/workflowexample.scss
+++ b/src/workflowexample/workflowexample.scss
@@ -2,3 +2,4 @@
 @import "~@/styles/modules/cf-text-box";
 @import "~@/styles/modules/cf-navigation";
 @import "~@/styles/modules/cf-page";
+@import "~@/styles/modules/cf-powered-by-confirmit__link";
