--- a/src/reportalglobal/reportalglobal.scss
+++ b/src/reportalglobal/reportalglobal.scss
@@ -1,7 +1,9 @@
 div.main-header {
-	background: url('~@assets/kpmg-logo--white-bg.png') no-repeat 1em center/auto 50%;
 
 	h1 {
+		width: 100%;
+		height: 2em;
 		text-indent: -99999999px;
+		background: url('~@assets/kpmg-logo--white.png') no-repeat left center/auto 50%;
 	}
 }
