--- a/src/reportalglobal/reportalglobal.scss
+++ b/src/reportalglobal/reportalglobal.scss
@@ -1,9 +1,3 @@
-div.main-header {
-
-	h1 {
-		width: 100%;
-		height: 2em;
-		text-indent: -99999999px;
-		background: url('~@assets/kpmg-logo--white.png') no-repeat left center/auto 50%;
-	}
-}
+@import "~@/styles/common/variables";
+@import "~@/styles/modules/reportal/main-header";
+@import "~@/styles/modules/reportal/color-page";
