--- a/src/reportalglobal/reportalglobal.scss
+++ b/src/reportalglobal/reportalglobal.scss
@@ -1,3 +1,5 @@
 @import "~@/styles/common/variables";
+@import "~@/styles/common/typography";
+
 @import "~@/styles/modules/reportal/main-header";
 @import "~@/styles/modules/reportal/color-page";
