--- a/src/styles/modules/reportal/_color-page.scss
+++ b/src/styles/modules/reportal/_color-page.scss
@@ -1,4 +1,5 @@
 span.color-page-title {
-	font-family: 'KPMG';
+	font-family: $kpmg-font-stack;
 	color: $kpmg-blue--light;
+	font-size: 3rem!important;
 }
