Update font weight

--- a/src/styles/modules/reportal/_color-page.scss
+++ b/src/styles/modules/reportal/_color-page.scss
@@ -2,4 +2,5 @@ span.color-page-title {
 	font-family: $kpmg-font-stack;
 	color: $kpmg-blue--light;
 	font-size: 3rem!important;
+	font-weight: 700;
 }
