Add circular chart styling

--- a/src/reportalglobal/reportalglobal.scss
+++ b/src/reportalglobal/reportalglobal.scss
@@ -3,3 +3,4 @@
 
 @import "~@/styles/modules/reportal/main-header";
 @import "~@/styles/modules/reportal/color-page";
+@import "~@/styles/modules/reportal/circular-chart";
