Update stroke circular chart

--- a/src/styles/modules/reportal/_circular-chart.scss
+++ b/src/styles/modules/reportal/_circular-chart.scss
@@ -1,3 +1,5 @@
+@import "~@/styles/common/variables";
+
 .circular-chart {
   display: block;
   margin: 10px auto;
@@ -16,6 +18,7 @@
   stroke-width: 2.8;
   stroke-linecap: round;
   animation: progress 1s ease-out forwards;
+  stroke: $kpmg-blue--medium;
 }
 
 @keyframes progress {
