--- a/src/boardcontrol1/boardcontrol1.scss
+++ b/src/boardcontrol1/boardcontrol1.scss
@@ -4,8 +4,13 @@
 	.module-title {
 		font-family: $kpmg-font-stack;
 		color: $kpmg-blue--light;
-		font-size: 2.5rem;
+		font-size: 2.7rem;
 		font-weight: 700;
-		margin-bottom: 1.3em;
+		margin-bottom: 1.3rem;
+    margin-top: 0;
+	}
+
+	.circular-chart {
+		width: 150px;
 	}
 }
