--- a/src/styles/modules/reportal/_circular-chart.scss
+++ b/src/styles/modules/reportal/_circular-chart.scss
@@ -19,7 +19,7 @@
   stroke-width: 2.8;
   stroke-linecap: round;
   animation: progress 1s ease-out forwards;
-  stroke: $kpmg-blue--medium;
+  stroke: #8124a9;
 }
 
 @keyframes progress {
