--- a/src/styles/modules/reportal/_report-data.scss
+++ b/src/styles/modules/reportal/_report-data.scss
@@ -12,6 +12,8 @@
 		line-height: 1;
 		background: #eee;
 		margin-top: 0;
+		position: relative;
+    padding: 1em 0 1em 2.7em;
 
     &::before {
 			content: "";
