--- a/src/reportalglobal/reportalglobal.scss
+++ b/src/reportalglobal/reportalglobal.scss
@@ -5,3 +5,8 @@
 @import "~@/styles/modules/reportal/color-page";
 @import "~@/styles/modules/reportal/circular-chart";
 @import "~@/styles/modules/reportal/report-data";
+
+
+.main-content {
+	position: relative;
+}
