--- a/src/boardcontrol1/boardcontrol1.scss
+++ b/src/boardcontrol1/boardcontrol1.scss
@@ -16,7 +16,8 @@
 	.circular-chart {
 		position: absolute;
     top: 0;
-    right: 0;
-		width: 150px;
+    right: 3em;
+    width: 150px;
+    margin: 0;
 	}
 }
